# vsl-bc-app-examples

./: .dockerignore  .gitignore  .gitmodules  LICENSE  README.md  docker-compose.vsl.yml  genesis.json
base-tee/: go.mod  go.sum
base-tee/pkg/abstract_types/: types.go
base/go/: .dockerignore  README.md  go.mod  go.sum
base/rs/: .gitignore  Cargo.toml
base/rs/src/: backend_client.rs  btc_rpc.rs  lib.rs  signer.rs  vsl_utils.rs
base/rs/src/vsl_utils/: timestamp.rs  vsl_rpc.rs  vsl_types.rs
example/: README.md  docker-compose.vsl.yml  set-up-env-file.sh
example/common/attester/: .gitignore  README.md  go.mod  go.sum  main.go  sample.env
example/common/attester/block_processing/kreth/: Cargo.toml  setup_kreth.sh
example/common/attester/block_processing/kreth/src/: block_processing.rs  main.rs  types.rs
example/frontend/: README.md  package.json  sample.env
example/frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
example/frontend/config/: wallet.ts
example/frontend/types/: index.ts
example/frontend/utils/: format.ts  signature.ts
example/vsl-rpc-demo/: .gitignore  go.mod  go.sum  main.go  sample.env
example/vsl-rpc-demo/cmd/: root.go  vsl_commands.go
example/vsl-rpc-demo/tests/: e2e_cli.sh  goldfish_report.out  prompt_report.out
example/vsl-rpc-demo/utils/: signature.go  signature_test.go
example/vsl-rpc-demo/vsl-wrapper/: vsl.go
examples/block-header/: Makefile  README.md  docker-compose.yml
examples/block-header/backend/: .gitignore  Dockerfile  README.md  go.mod  go.sum  sample.env
examples/block-header/btc/: README.md  docker-compose.yml
examples/block-header/btc/claim-submitter/: Cargo.toml  Dockerfile  integration_test.env  sample.env
examples/block-header/btc/claim-submitter/src/: main.rs
examples/block-header/eth/: Makefile  README.md
examples/block-header/eth/claim-submitter/: .gitignore  Cargo.toml  Dockerfile  integration_test.env  sample.env
examples/block-header/eth/claim-submitter/src/: main.rs  utils.rs
examples/block-header/frontend/: Dockerfile  appkit-components.d.ts  bun.lockb  next.config.ts  package.json  sample.env
examples/blockchain-mirroring/: Makefile  README.md  docker-compose.yml  sample.env
examples/blockchain-mirroring/backend/: README.md  sample.env
examples/blockchain-mirroring/btc-mirroring/claim-submitter/: .gitignore  Cargo.toml  Dockerfile  integration_test.env  sample.env
examples/blockchain-mirroring/btc-mirroring/claim-submitter/src/: main.rs
examples/blockchain-mirroring/frontend/: README.md  bun.lockb  package.json  sample.env
examples/blockchain-mirroring/mirroring-reth-kevm/claim-submitter/: Cargo.toml  Dockerfile  integration_test.env  sample.env
examples/blockchain-mirroring/mirroring-reth-kevm/claim-submitter/src/: main.rs
examples/blockchain-mirroring/mirroring-reth-kevm/claim-verifier/: Cargo.toml  Dockerfile  README.md  integration_test.env
examples/blockchain-mirroring/mirroring-reth-kevm/claim-verifier/src/: main.rs
examples/blockchain-mirroring/tests/: Dockerfile  Dockerfile.kevm  check-test-result-btc.sh  check-test-result-geth.sh  check-test-result-reth-kevm.sh  check-test-result-reth.sh  docker-compose.kevm.yml  docker-compose.yml  integration-test.kevm.sh  integration-test.sh
examples/wormhole-vsl/: Makefile  README.local.md  README.md  docker-compose.yml  foundry.toml  sample.env
examples/wormhole-vsl/backend/: .gitignore  Dockerfile  go.mod  go.sum  sample.env
examples/wormhole-vsl/observer/: Dockerfile  README.md  go.mod  go.sum  sample.env
examples/wormhole-vsl/relayer/: Cargo.toml  Dockerfile  integration_test.env  rust-toolchain.toml  sample.env
examples/wormhole-vsl/relayer/src/: abi.json  contract.rs  main.rs  types.rs  vsl.rs
examples/wormhole-vsl/script/: Base.sol  Deploy.s.sol  Operations.s.sol  Setup.s.sol
examples/wormhole-vsl/test/: EVMViewFnClaim.t.sol  Vsl.t.sol  claim1.json  claim2.json  test_usl.t.sol  utilities.sol
examples/wormhole-vsl/tests/: integration-test.sh  wormhole.sh
examples/wormhole-vsl/verifier/: Dockerfile  go.mod  go.sum  sample.env
examples/wormhole-vsl/web/: Dockerfile  README.md  package.json  pnpm-lock.yaml  sample.env  tailwind.config.ts
generation/: go.mod
generation/block-header/: .gitignore  Cargo.toml
generation/block-header/btc/rs/: .gitignore  Cargo.toml
generation/block-header/btc/rs/src/generation/: block_header.rs
generation/block-header/eth/rs/: .gitignore  Cargo.toml  README.md
generation/block-header/eth/rs/src/generation/: block_header.rs
generation/block-processing-kevm/rs/: .gitignore  Cargo.toml
generation/block-processing-kevm/rs/src/: lib.rs  types.rs
generation/block-processing-kevm/rs/src/generation/: block_processing.rs
generation/block-processing/btc/rs/: Cargo.toml  README.md
generation/block-processing/btc/rs/src/: lib.rs  types.rs
generation/block-processing/btc/rs/src/generation/: block_processing.rs  test_claim.json
generation/block-processing/evm/rs/: Cargo.toml  README.md
generation/pkg/generation/: claim_generation.go
tests/unit/attester-program/: go.mod  program_test.go
tests/unit/tee-verification/: .env  generation_verification_test.go  go.mod  go.sum
verification/: go.mod  go.sum
verification/block-header/btc/rs/: .gitignore  Cargo.toml
verification/block-header/btc/rs/src/verification/: block_header.rs  block_header_test_mock_claim.json  block_header_test_mock_claim_context.json
verification/block-header/eth/rs/: .gitignore  Cargo.toml  README.md
verification/block-header/eth/rs/src/verification/: block_header.rs  block_header_test_mock_claim.json  block_header_test_mock_claim_context.json
verification/block-processing-kevm/rs/: Cargo.toml  Dockerfile.test  Makefile  README.md
verification/block-processing/btc/rs/: Cargo.toml  README.md
verification/block-processing/btc/rs/src/verification/: block_processing.rs  test_proof.json
verification/block-processing/evm/rs/: Cargo.toml
verification/block-processing/evm/rs/src/verification/: block_processing.rs  block_processing_test_mock_claim.json
(+271 files in other folders)
