[package]
name = "relayer"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
bytes = "1.8.0"
anyhow = "1.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["json"] }
alloy = { version = "0.15.10", features = ["full"] }
base = { version = "0.1.0", path = "../../../base/rs" }
