[package]
name = "claim-submitter-btc-header"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
jsonrpsee = { version = "0.24.9", features = ["http-client", "server", "macros"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
base = { version ="0.1.0", path= "../../../../base/rs"}
generation-block-header-btc= {version ="0.1.0", path ="../../../../generation/block-header/btc/rs/"}
verification-block-header-btc= {version ="0.1.0", path ="../../../../verification/block-header/btc/rs/"}
block-header-common = {version ="0.1.0", path ="../../../../generation/block-header/common/rs"}
reqwest = "0.12.15"
serde_json = "1.0.140"
log = "0.4.27"
env_logger = "0.11.8"
alloy = "0.15.10"
hex= "0.4.3"
bitcoin = { version="0.32.6", features = ["serde"] }
