[package]
name = "claim-submitter"
version = "0.1.0"
edition = "2024"


[features]
integration-tests = []

[dependencies]
dotenvy = "0.15.7"
jsonrpsee = { version = "0.24.9", features = ["http-client", "server", "macros"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
base = { version ="0.1.0", path= "../../../../base/rs"}
generation-block-header-eth= {version ="0.1.0", path ="../../../../generation/block-header/eth/rs/"}
block-header-common = {version ="0.1.0", path ="../../../../generation/block-header/common/rs"}
verification-block-header-eth= {version ="0.1.0", path ="../../../../verification/block-header/eth/rs/"}
reqwest = "0.12.15"
serde_json = "1.0.140"
log = "0.4.27"
env_logger = "0.11.8"
web3 = "0.19.0"
alloy = "0.15.10"
hex= "0.4.3"
