[package]
name = "mirroring-reth-kevm-claim-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.44.2", features = ["full"] }
base = { version ="0.1.0", path= "../../../../base/rs"}
generation-block-processing-evm = { path = "../../../../generation/block-processing-kevm/rs", version = "0.1.0" }
verification-block-processing-evm = { path = "../../../../verification/block-processing-kevm/rs", version = "0.1.0" }
serde_json = "1.0.140"
log = "0.4.27"
env_logger = "0.11.8"
alloy = "0.15.10"
reqwest = "0.12.16"
