[package]
name = "generation-block-header-eth"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "0.15.10" 
thiserror = { version = "2.0.0", default-features = false }
base = {version= "0.1.0", path ="../../../../base/rs"}
block-header-common = {version= "0.1.0",path= "../../common/rs"}
serde_json = "1.0.140"
serde =  { version = "1.0", features = ["derive"] }
hex = "0.4.3"
sha2= "0.10.9"

[dev-dependencies]
serde_json = "1.0.140"
tokio = "1.44.2"
