[package]
name = "generation-block-processing-btc"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = { version = "0.32.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
base= {version = "0.1.0", path = "../../../../base/rs"}
