[package]
name = "generation-block-processing-evm"
version = "0.1.0"
edition = "2024"

[dependencies]
# alloy
alloy-rlp = "0.3.11"
alloy-consensus = "0.15.10"
alloy-genesis = "0.15.10"
alloy-primitives = "1.1.0"
alloy-rpc-types-debug = "0.15.10"

# reth
reth-rpc-api = { git = "https://github.com/Pi-Squared-Inc/reth-pi2", rev = "a981225c9097e71d5674da7a18a25ee742d1cb0a", features = [
  "client",
] }
reth-primitives = { git = "https://github.com/Pi-Squared-Inc/reth-pi2", rev = "a981225c9097e71d5674da7a18a25ee742d1cb0a" }
reth-primitives-traits = { git = "https://github.com/Pi-Squared-Inc/reth-pi2", rev = "a981225c9097e71d5674da7a18a25ee742d1cb0a" }
reth-stateless = { git = "https://github.com/Pi-Squared-Inc/reth-pi2", rev = "a981225c9097e71d5674da7a18a25ee742d1cb0a" }

# misc
jsonrpsee = { version = "0.24.9", features = [
  "jsonrpsee-http-client",
] }
thiserror = { version = "2.0.0", default-features = false }
serde = "1.0.219"

[dev-dependencies]
serde_json = "1.0.140"
tokio = "1.44.2"
