[package]
name = "verification-block-header-btc"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = { version="0.32.6", features = ["serde"] }
base = {version= "0.1.0", path ="../../../../base/rs"}
block-header-common = {version= "0.1.0", path ="../../../../generation/block-header/common/rs"}
generation-block-header-btc = {version ="0.1.0", path = "../../../../generation/block-header/btc/rs"}
thiserror = { version = "2.0.0", default-features = false }
serde_json = "1.0.140"
sha2= "0.10.9"
hex = "0.4.3"
alloy= "0.15.10"
