[package]
name = "verification-block-header-eth"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { version = "2.0.0", default-features = false }
alloy = "0.15.10" 
base = { version ="0.1.0", path= "../../../../base/rs"}
block-header-common = { version = "0.1.0", path= "../../../../generation/block-header/common/rs" }
generation-block-header-eth ={version ="0.1.0", path= "../../../../generation/block-header/eth/rs"}
serde_json = "1.0.140"
hex = "0.4.3"
sha2 = "0.10.9"
