[package]
name = "verification-block-processing-evm"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-consensus = "0.15.10"

reth-stateless = { git = "https://github.com/Pi-Squared-Inc/reth", branch = "enable-kzg-feature" }
reth-primitives = { git = "https://github.com/Pi-Squared-Inc/reth", branch = "enable-kzg-feature" }
reth-primitives-traits = { git = "https://github.com/Pi-Squared-Inc/reth", branch = "enable-kzg-feature" }
reth-chainspec = { git = "https://github.com/Pi-Squared-Inc/reth", branch = "enable-kzg-feature" }

alloy-rlp = "0.3.11"
thiserror = { version = "2.0.0", default-features = false }
alloy-genesis = "0.15.10"

generation-block-processing-evm = { path = "../../../../generation/block-processing/evm/rs", version = "0.1.0" }

[dev-dependencies]
serde_json = "1.0.140"
