[package]
name = "block_processing_kreth"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-consensus = "0.15.10"
alloy-rlp = "0.3.11"
alloy-primitives = "1.1.0"
alloy-genesis = "0.15.10"

reth-stateless = { git = "ssh://git@github.com/Pi-Squared-Inc/reth.git",  rev = "9ed50026340337308da7ae300921781e5b285c20" }
reth-primitives = { git = "ssh://git@github.com/Pi-Squared-Inc/reth.git",  rev = "9ed50026340337308da7ae300921781e5b285c20" }
reth-primitives-traits = { git = "ssh://git@github.com/Pi-Squared-Inc/reth.git",  rev = "9ed50026340337308da7ae300921781e5b285c20" }
reth-chainspec = { git = "ssh://git@github.com/Pi-Squared-Inc/reth.git",  rev = "9ed50026340337308da7ae300921781e5b285c20" }

serde = "1.0.219"
serde_json = "1.0.140"

thiserror = { version = "2.0.0", default-features = false }